[add]auth機能までリファクタ
