# swagger/swagger.yaml
@@ -10,14 +10,12 @@ tags:
     description: 認証API
   - name: user
     description: ユーザー関連API
-  - name: article
+  - name: work
     description: 作品関連API
   - name: group
     description: グループ関連API
   - name: search
     description: 検索関連API
-  - name: temp
-    description: テンプレート
 paths:
   /sign/up:
     post:
@@ -47,7 +45,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /sign/in:
+  /login:
     post:
       tags:
         - auth
@@ -166,10 +164,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /article:
+  /work:
     post:
       tags:
-        - article
+        - work
       summary: 作品投稿API
       security:
         - Bearer: []
@@ -200,14 +198,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /article/{articleID}:
+  /work/{workID}:
     get:
       tags:
-        - article
+        - work
       summary: 作品情報取得API
       description: 作品の詳細情報を取得します
       parameters:
-        - $ref: '#/components/parameters/articleID'
+        - $ref: '#/components/parameters/workID'
       responses:
         '200':
           description: OK
@@ -229,13 +227,13 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
     put:
       tags:
-        - article
+        - work
       summary: 作品情報更新API
       security:
         - Bearer: []
       description: 作品情報を更新します
       parameters:
-        - $ref: '#/components/parameters/articleID'
+        - $ref: '#/components/parameters/workID'
       requestBody:
         description: Request Body
         content:
@@ -264,13 +262,13 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
     delete:
       tags:
-        - article
+        - work
       summary: 作品情報削除API
       security:
         - Bearer: []
       description: 作品情報を削除します
       parameters:
-        - $ref: '#/components/parameters/articleID'
+        - $ref: '#/components/parameters/workID'
       responses:
         '200':
           description: OK
@@ -290,10 +288,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /article/articles/{number}:
+  /works/{number}:
     get:
       tags:
-        - article
+        - work
       summary: 作品一覧取得API
       description: 最新の作品一覧を取得します
       parameters:
@@ -317,10 +315,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /article/articles/{tag}:
+  /works/{tag}:
     get:
       tags:
-        - article
+        - work
       summary: タグに基づく作品一覧取得API
       description: タグに一致する作品一覧を取得します
       parameters:
@@ -383,14 +381,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /template:
+  /:
     get:
       tags:
-        - temp
-      summary: テンプレ
-      security:
-        - Bearer: []
-      description: リクエストヘッダの`token`を取得しユーザのQRコードのURLを返却します。
+        - test
+      summary: 接続確認
+      description: health
       responses:
         '200':
           description: OK
@@ -516,16 +512,16 @@ components:
         - userID
         - password
     CreateArticleRequest:
-      $ref: '#/components/schemas/article'
+      $ref: '#/components/schemas/work'
     CreateArticleResponse:
       properties:
         articleID:
           type: string
           description: 作品ID
     ReadArticleResponse:
-      $ref: '#/components/schemas/article'
+      $ref: '#/components/schemas/work'
     UpdateArticleRequest:
-      $ref: '#/components/schemas/article'
+      $ref: '#/components/schemas/work'
     ReadArticlesResponse:
       properties:
         articles:
@@ -579,7 +575,7 @@ components:
                 type: string
                 description: グループの名前
                 example: FinTech
-    article:
+    work:
       type: object
       properties:
         title:
@@ -682,8 +678,8 @@ components:
       description: cardID
       schema:
         type: string
-    articleID:
-      name: articleID
+    workID:
+      name: workID
       in: path
       description: 作品ID
       required: true
